margin correction on mobile screen for project description

--- a/Projects/style-projects.css
+++ b/Projects/style-projects.css
@@ -32,6 +32,11 @@ p {
   max-width: 400px;
   margin: 0 40px 40px 0;
 }
+@media (max-width: 580px){
+  .descriptionbox {
+    margin: 0 0 40px 0;
+  }
+}
 
 .description {
   text-align: left;
